--- a/CommandPrompt.html
+++ b/CommandPrompt.html
@@ -138,8 +138,8 @@
   <!--Quotes-->
  
     <div class="container-fluid afterparallax">
-      <div class="row">
-        <div class="col-lg-9 col-xs-12">
+      <div class="row h-100">
+        <div class="col-lg-9 col-xs-12 my-auto">
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
